--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="list-group-item"><a href="Memory/index.html">The YouTubers Memory Game</a></li>
         <li class="list-group-item"><a href="Snake/index.html">Snake</li>
         <li class="list-group-item"><a href="GuessTheColor/index.html">Guess The Color</li>
-        <li class="list-group-item"><a href="Whack-A-Mole/index.html">Whack-A-Mole</li>
+        <li class="list-group-item"><a href="Whac-A-Mole/index.html">Whack-A-Mole</li>
       </ul>
     </div>
   </body>
