Updated Whac-A-Mole game

--- a/Whac-A-Mole/index.html
+++ b/Whac-A-Mole/index.html
@@ -24,11 +24,11 @@
       <div id="timer">30 seconds remaining</div>
       <button type="button" onClick="window.location.reload();">RESET</button>
       <br>
-      <button id="easybtn" type="button" name="button" class="selected">EASY</button>
-      <button id="mediumbtn" type="button" name="button">MEDIUM</button>
-      <button id="hardbtn" type="button" name="button">HARD</button>
+      <button id="easybtn" type="button" name="button" class="selected" autocomplete="off">EASY</button>
+      <button id="mediumbtn" type="button" name="button" autocomplete="off">MEDIUM</button>
+      <button id="hardbtn" type="button" name="button" autocomplete="off">HARD</button>
       <br>
-      <button id="start" type="button" name="button">START</button>
+      <button id="start" type="button" name="button" autocomplete="off">START</button>
     </div>
     <script src="app.js"></script>
   </body>
