Added Connect Four game

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li class="list-group-item"><a href="Snake/index.html">Snake</li>
         <li class="list-group-item"><a href="GuessTheColor/index.html">Guess The Color</li>
         <li class="list-group-item"><a href="Whac-A-Mole/index.html">Whack-A-Mole</li>
+        <li class="list-group-item"><a href="ConnectFour/index.html">Connect Four</li>
       </ul>
     </div>
   </body>
