--- a/GuessTheColor/index.html
+++ b/GuessTheColor/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Color Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -27,6 +27,6 @@
       <div class="square"></div>
     </div>
 
-    <script src="colorGame.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
