--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>mizanxali GameZone</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="https://www.github.com/mizanxali">@mizanxali</a>'s GAME ZONE</h1>
@@ -16,6 +16,7 @@
         <li class="list-group-item"><a href="GuessTheColor/index.html">Guess The Color</li>
         <li class="list-group-item"><a href="Whac-A-Mole/index.html">Whack-A-Mole</li>
         <li class="list-group-item"><a href="ConnectFour/index.html">Connect Four</li>
+        <li class="list-group-item"><a href="SpaceInvaders/index.html">Space Invaders</li>
       </ul>
     </div>
   </body>
