Added Frogger game

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li class="list-group-item"><a href="Whac-A-Mole/index.html">Whack-A-Mole</li>
         <li class="list-group-item"><a href="ConnectFour/index.html">Connect Four</li>
         <li class="list-group-item"><a href="SpaceInvaders/index.html">Space Invaders</li>
+        <li class="list-group-item"><a href="Frogger/index.html">Frogger</li>
       </ul>
     </div>
   </body>
