Added Candy Crush Saga

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li class="list-group-item"><a href="ConnectFour/index.html">Connect Four</li>
         <li class="list-group-item"><a href="SpaceInvaders/index.html">Space Invaders</li>
         <li class="list-group-item"><a href="Frogger/index.html">Frogger</li>
+        <li class="list-group-item"><a href="CandyCrushSaga/index.html">Candy Crush Saga</li>
       </ul>
     </div>
   </body>
