--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li class="list-group-item"><a href="SpaceInvaders/index.html">Space Invaders</li>
         <li class="list-group-item"><a href="Frogger/index.html">Frogger</li>
         <li class="list-group-item"><a href="CandyCrushSaga/index.html">Candy Crush Saga</li>
+        <li class="list-group-item"><a href="2048/index.html">2048</li>
       </ul>
     </div>
   </body>
