Added Pac-Man game beta version

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li class="list-group-item"><a href="Frogger/index.html">Frogger</li>
         <li class="list-group-item"><a href="CandyCrushSaga/index.html">Candy Crush Saga</li>
         <li class="list-group-item"><a href="2048/index.html">2048</li>
+        <li class="list-group-item"><a href="Pac-Man (beta)/index.html">Pac-Man (beta)</li>
       </ul>
     </div>
   </body>
