added sounds and more

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="assets/pac2.png">
+  
 </head>
 
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
   <div id="meta">
     <div class="menu">
 
@@ -49,6 +51,7 @@
   </div>
 
   <div id="grid"></div>
+
   <script src="app.js" charset="utf-8"></script>
 </body>
 
