--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="assets/pac2.png">
-  
+
 </head>
 
 <body>
@@ -49,8 +49,11 @@
       </div>
     </div>
   </div>
+  <div class="space"></div>
+  <div class="grid-p">
 
-  <div id="grid"></div>
+    <div id="grid"></div>
+  </div>
 
   <script src="app.js" charset="utf-8"></script>
 </body>
